[package]
name = "snowboard"
version = "0.6.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Brian3647/snowboard"
readme = "README.md"
description = "Extremely simple rust servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
rust-version = "1.60.0"
homepage = "https://github.com/Brian3647/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = ["network-programming", "web-programming::http-server", "parsing", "web-programming"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
native-tls = { version = "0.2.11", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.192", optional = true, features = ["derive"] }
tungstenite = { version = "0.20.1", optional = true }

[features]
default = []
full = ["async", "tls"]
async = ["async-std"]
tls = ["native-tls"]
json = ["serde_json", "serde"]
websocket = ["tungstenite"]

[lib]
doctest = false
required-features = []
