[package]
name = "snowboard"
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/Brian3647/snowboard"
readme = "README.md"
description = "Extremely simple rust servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
rust-version = "1.60.0"
homepage = "https://github.com/Brian3647/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = ["network-programming", "web-programming::http-server", "parsing", "web-programming"]

[dependencies]
async-std = { version = "1.12.0", optional = true }
native-tls = { version = "0.2.11", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.192", optional = true, features = ["derive"] }
tungstenite = { version = "0.21.0", optional = true }
base64 = { version = "0.21.5", optional =  true }
sha1 =  { version = "0.10.6", optional = true }
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
full = ["async", "tls", "json", "websocket"]
async = ["async-std"]
tls = ["native-tls"]
json = ["serde_json", "serde"]
websocket = ["tungstenite", "base64", "sha1"]

[lib]
doctest = false
required-features = []

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"
