[package]
name = "snowboard"
version = "1.0.3"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Brian3647/snowboard"
readme = "README.md"
description = "Extremely simple rust servers 🏂"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE"]
rust-version = "1.60.0"
homepage = "https://github.com/Brian3647/snowboard"
documentation = "https://docs.rs/snowboard"
keywords = ["http", "server", "web"]
categories = ["network-programming", "web-programming::http-server", "parsing", "web-programming"]

[dependencies]
serde_json = { version = "1.0.108", optional = true }
serde = { version = "1.0.192", optional = true, features = ["derive"] }
tungstenite = "0.21.0"
base64 = "0.21.5"
sha1 =  "0.10.6"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-native-tls = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[features]
default = []
json = ["serde_json", "serde"]

[lib]
doctest = false
required-features = []

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"
